--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendmicro/react-loader": "^0.6.1",
     "axios": "^1.5.0",
     "flag-icons": "^6.11.1",
     "framer-motion": "^10.16.4",
