--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@ DB_USER=elephants54706
 DB_PASSWORD=7gMLBMjo9XfOY0AO
 DB_NAME=stp
 JWT_SECRET=asdsdfr23423rfds
+IMAGE_STORAGE=C:\\Users\\pc\\Desktop\\Content\\WEB\\Learn projects\\MERN\\stp\\server\\static\\userAvatar\\
+MARKER_STORAGE=C:\\Users\\pc\\Desktop\\Content\\WEB\\Learn projects\\MERN\\stp\\server\\static\\markerName\\
