--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-loader": "^0.6.1",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "flag-icons": "^6.11.1",
     "framer-motion": "^10.16.4",
     "i18next": "^23.5.1",
@@ -19,9 +20,11 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.46.2",
     "react-i18next": "^13.2.2",
     "react-leaflet": "^4.2.1",
+    "react-loadable": "^5.5.0",
     "react-moment": "^1.1.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
