--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ DB_USER=elephants54706
 DB_PASSWORD=7gMLBMjo9XfOY0AO
 DB_NAME=stp
 JWT_SECRET=asdsdfr23423rfds
-IMAGE_STORAGE=C:\\Users\\pc\\Desktop\\Content\\WEB\\Learn projects\\MERN\\stp\\server\\static\\userAvatar\\
-MARKER_STORAGE=C:\\Users\\pc\\Desktop\\Content\\WEB\\Learn projects\\MERN\\stp\\server\\static\\markerName\\
+IMAGE_STORAGE=/stp--application/server/static/userAvatar/
+MARKER_STORAGE=/stp--application/server/static/markerName
 REACT_APP_EMAIL=adamsuper148@gmail.com
 REACT_APP_PASSWORD=nkhgbdeaxqbbmcxp
